fix z-index important remove

--- a/app/src/marketplace/components/Modal/StreamLiveDataDialog/streamLiveDataDialog.pcss
+++ b/app/src/marketplace/components/Modal/StreamLiveDataDialog/streamLiveDataDialog.pcss
@@ -122,7 +122,7 @@
 @media (--lg-down) {
   .closeRow {
     padding: 20px;
-    z-index: 20 !important;
+    z-index: 20;
   }
 
   .sidebar {
@@ -163,7 +163,6 @@
 
   .closeRow {
     padding: 15px;
-    z-index: initial;
   }
 
   .footer {
